Set images size and correct text alignment
Still in info section:
Simplified css structure. Removed unnecessary elements.
Text is now evenly justified.
Images size just a little bigger for the text to fit

--- a/style.css
+++ b/style.css
@@ -36,24 +36,23 @@ footer {
 }
 
 .info {
-    display: flex;
-    flex-direction: column;
+    text-align: center;
     padding: 0 150px;
-    align-items: center;
 }
 
 .boxes {
     display: flex;
+    justify-content: center;
     margin: 0;
     padding: 0;
-    width: 700px;
-    text-align: center;
 }
 
+.info-image {
+    height: 140px;
+    width: 140px;
+}
 
-
-/* .boxes div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center; */
+.info p {
+    width: 130px;
+    margin: 0 20px;
+}
